styling fix for horizontal scroll

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -79,6 +79,7 @@ hr {
 
 ::-webkit-scrollbar-track:horizontal {
     background-color: #00000010;
+    margin: 0px 12px;
 }
 
 #app {
